[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/root/popups/scraping_game_picker/ScrapingGamePickerPopup.gd" type="Script" id=1]

[node name="ScrapingGamePickerPopup" type="ConfirmationDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 15.0
margin_right = -15.0
margin_bottom = -41.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 994.0
margin_bottom = 14.0
text = "Select the games you wish to scrape:"

[node name="GameTree" type="Tree" parent="VBoxContainer"]
unique_name_in_owner = true
margin_top = 18.0
margin_right = 994.0
margin_bottom = 544.0
size_flags_vertical = 3
columns = 2
column_titles_visible = true

[connection signal="about_to_show" from="." to="." method="_on_ScrapingGamePickerPopup_about_to_show"]
[connection signal="confirmed" from="." to="." method="_on_ScrapingGamePickerPopup_confirmed"]
[connection signal="popup_hide" from="." to="." method="_on_ScrapingGamePickerPopup_popup_hide"]
[connection signal="button_pressed" from="VBoxContainer/GameTree" to="." method="_on_GameTree_button_pressed"]
[connection signal="item_edited" from="VBoxContainer/GameTree" to="." method="_on_GameTree_item_edited"]
